...
    addresses: [ '1538 Sherbrooke St. W., Montreal, QC, Canada' ],
    center: [ -73.581409, 45.496673 ]
  },
  {
    campus: 'SGW',
    code: 'H',
    name: 'Henry F. Hall Building',
    addresses: [ '1455 De Maisonneuve Blvd. W., Montreal, QC, Canada' ],
    center: [ -73.5788, 45.497092 ]
  },
  {
    campus: 'SGW',
    code: 'K',
...
    addresses: [ '2150 Bishop St., Montreal, QC, Canada' ],
    center: [ -73.579531, 45.497777 ]
  },
  {
    campus: 'SGW',
    code: 'LB',
    name: 'J.W. McConnell Building',
    addresses: [ '1400 De Maisonneuve Blvd. W., Montreal, QC, Canada' ],
    center: [ -73.578009, 45.49705 ]
  },
  {
    campus: 'SGW',
    code: 'LD',
...
