appId: com.anonymous.mobile
name: "Campus Navigation & Location Flow"
---
- launchApp
- assertVisible: "SGW • Sir George Williams"

- tapOn: "Loyola"
- assertVisible: "Loyola • Loyola"
- tapOn: "SGW"
- assertVisible: "SGW • Sir George Williams"

- setLocation:
    latitude: 45.4972
    longitude: -73.5788

- assertVisible: "Locate me"
- tapOn: "Locate me"

- assertVisible: "SGW • Sir George Williams"
- repeat:
    times: 10
    commands:
        - assertVisible: "SGW • Sir George Williams"

- stopApp
